# parallel_connected_components

./: .gitignore  CMakeLists.txt  Makefile  README.md
benchmarks/: benchmark_mpi.c  benchmark_opencilk.c  benchmark_openmp.c  benchmark_pthreads.c  benchmark_sequential.c
data/: test_small.mtx
inc/: benchmark.h  benchmark_opencilk.h  cc_common.h  cc_opencilk.h  cc_openmp.h  cc_parallel.h  cc_sequential.h  cilk_stub.h  graph.h  mtx_reader.h
inc/mpi/: cc_mpi.h
inc/pthreads/: afforest_simple.h  cc_pthreads.h  definitions.h  deque.h  threadpool.h  utils.h  worker.h
scripts/: benchmark_comparison.sh  download_graph.sh  run_benchmarks.sh  run_mpi_scaling.sh  run_mpi_slurm.sh
slurm/: README.md  job_cilk.sh  job_full_benchmark.sh  job_gpu.sh  job_mpi.sh  job_openmp.sh  job_sequential.sh  submit_all.sh
src/: cc_common.c  cc_opencilk.c  cc_openmp.c  cc_parallel.c  cc_sequential.c  graph.c  main.c  mtx_reader.c
src/mpi/: cc_mpi.c
src/pthreads/: afforest_simple.c  cc_afforest.c  cc_pthreads.c  deque.c  threadpool.c  worker.c
tools/: generate_graph  generate_graph.c
